# SEKIBAKO

./: .gitignore  CMakeLists.txt
src/: CMakeLists.txt
src/project/: CMakeLists.txt  main.cpp
src/project/debug/: debuger.cpp
src/project/game/: game.cpp  game.h  resources_name.h
src/project/game/animation_master/: animation_master.cpp  animation_master.h
src/project/game/collision_manager/: collision_manager.cpp  collision_manager.h
src/project/game/effect_master/: effect_master.cpp  effect_master.h
src/project/game/state_machine/: state_machine.cpp  state_machine.h
src/project/imgui_windows/: degug.cpp  imgui_windows.h
src/project/player/: player.cpp  player.h  player_effect.cpp  player_effect.h
src/project/player/player_effects/: effect_attack.cpp  effect_jump.cpp  effect_land.cpp  player_effects.h
src/project/player/player_states/: player_ascend.cpp  player_attack.cpp  player_dash.cpp  player_fall.cpp  player_idel.cpp  player_jump.cpp  player_leviate.cpp  player_roll.cpp  player_run.cpp  player_states.h  player_walk.cpp
src/test/: CMakeLists.txt
src/test/test_base/: main.cpp
